Mon premier commit sur la branche de redesign

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    Hello bonjour
+    Hello bonjour, je voudrai just tester la fonctionnalite de branch
   </body>
 </html>
